[3.4.0]更新BluestarAPI版本